--- a/nbs/experiment/lake_experiment_loader.ipynb
+++ b/nbs/experiment/lake_experiment_loader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,9 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -32,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,8 +56,8 @@
     "from incense.artifact import CSVArtifact\n",
     "from incense.experiment import Experiment\n",
     "from nbdev import Config\n",
-    "from sciflow.utils import load_dremio_access\n",
-    "from text_discovery.lake_experiment import LakeExperiment\n",
+    "from sciflow.utils import odbc_connect, query_odbc\n",
+    "from sciflow.experiment.lake_experiment import LakeExperiment\n",
     "from tinydb import Query, TinyDB\n",
     "from tinydb.storages import MemoryStorage\n",
     "from turbodbc.exceptions import DatabaseError\n",
@@ -58,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,15 +77,15 @@
     "        self,\n",
     "        experiment_name,\n",
     "        experiments_key_prefix=None,\n",
-    "        dremio_access=None,\n",
+    "        connection=None,\n",
     "        bucket_name=None,\n",
     "        bucket_table_alias=None,\n",
     "    ):\n",
     "        config = Config()\n",
     "        lib_name = config.lib_name\n",
     "        self.experiment_name = experiment_name\n",
-    "        self.dremio_access = (\n",
-    "            load_dremio_access() if dremio_access is None else dremio_access\n",
+    "        self.connection = (\n",
+    "            odbc_connect() if connection is None else connection\n",
     "        )\n",
     "        self.bucket_name = config.bucket if bucket_name is None else bucket_name\n",
     "        self.bucket_table_alias = (\n",
@@ -117,7 +126,7 @@
     "            query += f\" order by {order_by} desc\"\n",
     "        if limit:\n",
     "            query += f\" limit {limit}\"\n",
-    "        data = self.dremio_access.read_sql_to_dataframe(query)\n",
+    "        data = query_odbc(self.connection, query)\n",
     "        experiments = [\n",
     "            LakeExperiment(\n",
     "                self.bucket_name,\n",
@@ -199,11 +208,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dremio_access = load_dremio_access()  # default - load it\n",
     "bucket_name = \"s3bawspprwe1chatbotunpub01\"  # default = bucket\n",
     "bucket_table_alias = \"chatbot_unpublish_s3\"\n",
     "experiments_key_prefix = \"discovery/experiments/test\"  # default = lib_name/experiments\n",
@@ -212,22 +220,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ODBC_DRIVER /opt/dremio-odbc/lib64/libdrillodbc_sb64.so\n",
+      "ODBC_USER E02079\n",
+      "ODBC_PWD HYgzAG9ASxy1BBUa24jS4VVOL/wrJcyDAIKUdSPv4aD+7jFzvNUyoziBWeqKjg==\n",
+      "ODBC_PORT 31010\n",
+      "ODBC_HOST dremio-master-0.dremio-cluster-pod.default.svc.cluster.local\n",
+      "SSL_CERTS /etc/ssl/certs/ca-certificates.crt\n"
+     ]
+    }
+   ],
    "source": [
     "loader = LakeExpLoader(\n",
-    "    experiment_name,\n",
-    "    experiments_key_prefix,\n",
-    "    dremio_access,\n",
-    "    bucket_name,\n",
-    "    bucket_table_alias,\n",
+    "    experiment_name=experiment_name,\n",
+    "    experiments_key_prefix=experiments_key_prefix,\n",
+    "    bucket_name=bucket_name,\n",
+    "    bucket_table_alias=bucket_table_alias,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +258,7 @@
        "Lake Table: chatbot_unpublish_s3.discovery.experiments.test.lake_observer"
       ]
      },
-     "execution_count": null,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,18 +293,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Experiment: generated_experiment_name_3028\n",
-       "Remote Path: pprsandboxpdlras3/sciflow/experiments/generated_experiment_name_3028\n",
-       "Lake Table: ra_s3.sciflow.experiments.generated_experiment_name_3028"
+       "Experiment: generated_experiment_name_69049\n",
+       "Remote Path: pprsandboxpdlras3/sciflow/experiments/generated_experiment_name_69049\n",
+       "Lake Table: ra_s3.sciflow.experiments.generated_experiment_name_69049"
       ]
      },
-     "execution_count": null,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,30 +315,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR IS: `ODBC error\n",
-      "state: HY000\n",
-      "native error code: 1040\n",
-      "message: [Dremio][Connector] (1040) Dremio failed to execute the query: select * from ra_s3.sciflow.experiments.generated_experiment_name_3028.runs\n",
-      "[30038]Query execution error. Details:[ \n",
-      "VALIDATION ERROR: Table 'ra_s3.sciflow.experiments.generated_experiment_name_3028.runs' not found\n",
-      "\n",
-      "SQL Query select * from ra_s3.sciflow.experiments.generated_experiment_name_3028.runs\n",
-      "startLine 1\n",
-      "startColumn 15\n",
-      "endLine 1\n",
-      "endColumn 19\n",
-      "\n",
-      "[Error Id: e10ace17...[see log]`\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    missing_loader.find_all()\n",
@@ -329,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +384,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 10.5 µs\n"
+      "Wall time: 9.54 µs\n"
      ]
     }
    ],
@@ -395,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,15 +403,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 304 ms, sys: 24 ms, total: 328 ms\n",
-      "Wall time: 1.42 s\n"
+      "CPU times: user 336 ms, sys: 4 ms, total: 340 ms\n",
+      "Wall time: 1.82 s\n"
      ]
     }
    ],
@@ -422,27 +421,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERROR IS: `ODBC error\n",
-      "state: HY000\n",
-      "native error code: 1040\n",
-      "message: [Dremio][Connector] (1040) Dremio failed to execute the query: select * from chatbot_unpublish_s3.discovery.experiments.test.laketest.runs\n",
-      "[30038]Query execution error. Details:[ \n",
-      "VALIDATION ERROR: Table 'chatbot_unpublish_s3.discovery.experiments.test.laketest.runs' not found\n",
-      "\n",
-      "SQL Query select * from chatbot_unpublish_s3.discovery.experiments.test.laketest.runs\n",
-      "startLine 1\n",
-      "startColumn 15\n",
-      "endLine 1\n",
-      "endColumn 34\n",
-      "\n",
-      "[Error Id: 985c6288...[see log]`\n",
       "Table not found\n"
      ]
     }
@@ -456,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,13 +460,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert len(loader.find_by_key(\"experiment\", \"name\", \"test-lake-obs\")) == 5\n",
     "assert loader.find_by_key(\"experiment\", \"mainfile\", \"extest.py\") is None"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
