--- a/nbs/test/test_clustering.ipynb
+++ b/nbs/test/test_clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,12 +61,12 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sciflow.utils import lib_path, load_dremio_access"
+    "from sciflow.utils import lib_path, odbc_connect, query"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "tags": [
      "parameters"
@@ -97,14 +97,14 @@
     "traffic_percent = 1\n",
     "speed = \"fast-learn\"\n",
     "workers = 8\n",
-    "dremio_access = load_dremio_access()\n",
+    "connection = odbc_connect()\n",
     "model_level = \"TopLevelDispatcher\"\n",
     "min_date = \"2021-01-01\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,16 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def get_utterances(dremio_access, model, min_date, traffic_percent):\n",
+    "def get_utterances(conn, model, min_date, traffic_percent):\n",
     "    segment = get_experiment_segment(traffic_percent)\n",
-    "    return dremio_access.read_sql_to_dataframe(\n",
+    "    return query(conn,\n",
     "        f\"\"\"\n",
     "    select Utterance from \"chatbot_unpublish_s3\".\"lambda-output\".\"finn_feedback\"\n",
     "    where model = '{model}' and to_date(substr(\"Timestamp\", 0, 10), 'YYYY-MM-dd') >= to_date('{min_date}', 'YYYY-MM-dd')\n",
@@ -178,14 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def get_button_responses_filter(dremio_access):\n",
+    "def get_button_responses_filter(conn):\n",
     "    button_responses_query = f\"\"\"\n",
     "    SELECT \"text\"\n",
     "    FROM \"chatbot_unpublish_s3\".\"lambda-output\".\"live_person\".messages a\n",
@@ -193,7 +193,7 @@
     "    on a.\"conversationId\" = b.\"LivePersonConversationId\"\n",
     "    where b.QuickReplyButton = true and a.eventBy = 'Consumer'\n",
     "    \"\"\"\n",
-    "    button_responses = dremio_access.read_sql_to_dataframe(button_responses_query)\n",
+    "    button_responses = query(conn, button_responses_query)\n",
     "    additional_button_responses = [\n",
     "        \"Transaction enquiry\",\n",
     "        \"Transaction Enquiry\",\n",
@@ -207,16 +207,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "# exportn_step:preprocess\n",
     "\n",
     "\n",
-    "def preprocess(dremio_access, model_level, min_date, traffic_percent):\n",
-    "    data = get_utterances(dremio_access, model_level, min_date, traffic_percent)\n",
-    "    button_filter = get_button_responses_filter(dremio_access)\n",
+    "def preprocess(conn, model_level, min_date, traffic_percent):\n",
+    "    data = get_utterances(conn, model_level, min_date, traffic_percent)\n",
+    "    button_filter = get_button_responses_filter(conn)\n",
     "    user_texts = data[~data.Utterance.isin(button_filter)].copy()\n",
     "    documents = user_texts.Utterance.tolist()\n",
     "    results = {\"documents\": documents}\n",
@@ -225,16 +225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "documents = preprocess(dremio_access, model_level, min_date, traffic_percent)"
+    "documents = preprocess(connection, model_level, min_date, traffic_percent)['documents']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,19 +311,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "# slow\n",
     "import time\n",
     "\n",
-    "time.sleep(30)"
+    "time.sleep(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
        "6"
       ]
      },
-     "execution_count": null,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
        "['cat', 'sat', 'mat', 'mouse', 'house', 'grouse']"
       ]
      },
-     "execution_count": null,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -476,16 +476,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Path('nbs/test/dataframe_artifact.csv')"
+       "Path('/home/jovyan/git/sciflow/nbs/test/dataframe_artifact.csv')"
       ]
      },
-     "execution_count": null,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,22 +544,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# slow\n",
-    "# debug\n",
-    "# Debug your Flow\n",
-    "# from metaflow import Metaflow\n",
-    "# os.environ['USER'] = 'e02079'\n",
-    "# flow = list(Metaflow())[0]\n",
-    "# run = flow.latest_run\n",
-    "# model2 = run['evaluate'].task.data.model"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -568,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,9 +600,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jovyan-discovery]",
+   "display_name": "Python [conda env:sciflow]",
    "language": "python",
-   "name": "conda-env-jovyan-discovery-py"
+   "name": "conda-env-sciflow-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
