--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,24 +122,26 @@
     "        env_file_path = os.path.expanduser('~/.sciflow/env')\n",
     "    # TODO create this for user\n",
     "    if not os.path.exists(env_file_path):\n",
-    "        raise EnvironmentError(f'You need to create a Sciflow env file at: {env_file_path}')\n",
+    "        raise EnvironmentError(f'You need to create a Sciflow environment vars file at: {env_file_path}')\n",
     "    with(open(env_file_path, 'r')) as env_file:\n",
     "        for line in env_file.readlines():\n",
     "            key, value = line.strip().split('=', 1)\n",
-    "            os.environ[key.replace('export ', '')] = value\n",
-    "            print(key.replace('export ', ''), value)"
+    "            os.environ[key.replace('export ', '')] = value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def odbc_connect(options = None):\n",
+    "def odbc_connect(options = None, env_file_path: str = None):\n",
+    "    required_vars = ('ODBC_DRIVER', 'ODBC_HOST', 'ODBC_PORT', 'ODBC_USER', 'ODBC_PWD')\n",
+    "    if not all([v in os.environ for v in required_vars]):\n",
+    "        prepare_env(env_file_path)\n",
     "    if options is None:\n",
     "        options = make_options(\n",
     "            fetch_wchar_as_char=True,\n",
@@ -160,14 +162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def query_odbc(conn, sql, strings_as_dictionary=False, adaptive_integers=False, \n",
+    "def query(conn, sql, strings_as_dictionary=False, adaptive_integers=False, \n",
     "               strings_to_categorical=False, date_as_object=False):\n",
     "    with conn.cursor() as cursor:\n",
     "        df = (cursor.execute(sql)\n",
@@ -185,14 +187,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "try:\n",
+    "    del os.environ['ODBC_DRIVER']\n",
+    "    del os.environ['ODBC_HOST']\n",
+    "    del os.environ['ODBC_PORT']\n",
+    "    del os.environ['ODBC_USER']\n",
+    "    del os.environ['ODBC_PWD']\n",
+    "    del os.environ['SSL_CERTS']\n",
+    "except KeyError:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 12 ms, sys: 8 ms, total: 20 ms\n",
+      "Wall time: 313 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
     "import turbodbc\n",
-    "conn = odbc_connect()\n",
+    "conn = odbc_connect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4 ms, sys: 8 ms, total: 12 ms\n",
+      "Wall time: 232 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
     "assert(type(conn) == turbodbc.connection.Connection)\n",
-    "assert(query_odbc(conn, \"SELECT 1 AS test_col\")['test_col'].iloc[0] == 1)"
+    "assert(query(conn, \"SELECT 1 AS test_col\")['test_col'].iloc[0] == 1)"
    ]
   }
  ],
