--- a/nbs/metaflow.ipynb
+++ b/nbs/metaflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,8 @@
     "from nbdev.export import Config, find_default_export, nbglob, read_nb\n",
     "from sciflow.data_handler import extract_param_meta\n",
     "from sciflow.params import params_as_dict\n",
-    "from sciflow.parse_module import FuncDetails, extract_steps"
+    "from sciflow.parse_module import FuncDetails, extract_steps\n",
+    "from sciflow.utils import prepare_env"
    ]
   },
   {
@@ -50,18 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -69,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,16 +171,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test Returns"
+    "prepare_env()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +325,7 @@
     "            )\n",
     "            flow_file.write(\"import time\")\n",
     "            write_observers(\n",
-    "                lib_name, flow_file, module_name, Config().bucket, Config().lib_name\n",
+    "                lib_name, flow_file, module_name, os.environ['SCIFLOW_BUCKET'], Config().lib_name\n",
     "            )\n",
     "\n",
     "        flow_file.write(f\"\\n\\nclass {flow_class_name}(FlowSpec):\\n\")\n",
@@ -352,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,25 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.environ[\"SCIFLOW_BUCKET\"] = Config().bucket"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO add .settings.ini"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -888,9 +862,50 @@
      "output_type": "stream",
      "text": [
       "Flow: test_module.py --no-pylint run verified\n",
-      "Flow: test_clustering.py --no-pylint run verified\n",
-      "Flow: test_data_handling.py --no-pylint run verified\n",
-      "Flow: test_export.py --no-pylint run verified\n"
+      "Flow: test_clustering.py --no-pylint run verification failed\n",
+      "Details:\n",
+      "Metaflow 2.0.5 executing TestClusteringFlow for user:e02079\n",
+      "Validating your flow...\n",
+      "    The graph looks good!\n",
+      "2021-04-25 19:52:27.281 Workflow starting (run-id 1619380347278200):\n",
+      "2021-04-25 19:52:27.285 [1619380347278200/start/1 (pid 4305)] Task is starting.\n",
+      "2021-04-25 19:52:28.648 [1619380347278200/start/1 (pid 4305)] Task finished successfully.\n",
+      "2021-04-25 19:52:28.654 [1619380347278200/preprocess/2 (pid 4333)] Task is starting.\n",
+      "2021-04-25 19:52:29.904 [1619380347278200/preprocess/2 (pid 4333)] <flow TestClusteringFlow step preprocess> failed:\n",
+      "2021-04-25 19:52:29.905 [1619380347278200/preprocess/2 (pid 4333)] Internal error\n",
+      "2021-04-25 19:52:29.905 [1619380347278200/preprocess/2 (pid 4333)] Traceback (most recent call last):\n",
+      "2021-04-25 19:52:29.905 [1619380347278200/preprocess/2 (pid 4333)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/metaflow/cli.py\", line 857, in main\n",
+      "2021-04-25 19:52:29.905 [1619380347278200/preprocess/2 (pid 4333)] start(auto_envvar_prefix='METAFLOW', obj=state)\n",
+      "2021-04-25 19:52:29.905 [1619380347278200/preprocess/2 (pid 4333)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/click/core.py\", line 829, in __call__\n",
+      "2021-04-25 19:52:29.905 [1619380347278200/preprocess/2 (pid 4333)] return self.main(args, kwargs)\n",
+      "2021-04-25 19:52:29.906 [1619380347278200/preprocess/2 (pid 4333)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/click/core.py\", line 782, in main\n",
+      "2021-04-25 19:52:29.906 [1619380347278200/preprocess/2 (pid 4333)] rv = self.invoke(ctx)\n",
+      "2021-04-25 19:52:29.906 [1619380347278200/preprocess/2 (pid 4333)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/click/core.py\", line 1259, in invoke\n",
+      "2021-04-25 19:52:29.906 [1619380347278200/preprocess/2 (pid 4333)] return _process_result(sub_ctx.command.invoke(sub_ctx))\n",
+      "2021-04-25 19:52:29.906 [1619380347278200/preprocess/2 (pid 4333)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/click/core.py\", line 1066, in invoke\n",
+      "2021-04-25 19:52:29.906 [1619380347278200/preprocess/2 (pid 4333)] return ctx.invoke(self.callback, ctx.params)\n",
+      "2021-04-25 19:52:29.906 [1619380347278200/preprocess/2 (pid 4333)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/click/core.py\", line 610, in invoke\n",
+      "2021-04-25 19:52:29.906 [1619380347278200/preprocess/2 (pid 4333)] return callback(args, kwargs)\n",
+      "2021-04-25 19:52:29.906 [1619380347278200/preprocess/2 (pid 4333)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/click/decorators.py\", line 33, in new_func\n",
+      "2021-04-25 19:52:29.906 [1619380347278200/preprocess/2 (pid 4333)] return f(get_current_context().obj, args, kwargs)\n",
+      "2021-04-25 19:52:30.017 [1619380347278200/preprocess/2 (pid 4333)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/metaflow/cli.py\", line 432, in step\n",
+      "2021-04-25 19:52:30.017 [1619380347278200/preprocess/2 (pid 4333)] max_user_code_retries)\n",
+      "2021-04-25 19:52:30.018 [1619380347278200/preprocess/2 (pid 4333)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/metaflow/task.py\", line 393, in run_step\n",
+      "2021-04-25 19:52:30.018 [1619380347278200/preprocess/2 (pid 4333)] self._exec_step_function(step_func)\n",
+      "2021-04-25 19:52:30.018 [1619380347278200/preprocess/2 (pid 4333)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/metaflow/task.py\", line 47, in _exec_step_function\n",
+      "2021-04-25 19:52:30.018 [1619380347278200/preprocess/2 (pid 4333)] step_function()\n",
+      "2021-04-25 19:52:30.018 [1619380347278200/preprocess/2 (pid 4333)] File \"/home/jovyan/git/sciflow/nbs/test/flows/test_clustering.py\", line 40, in preprocess\n",
+      "2021-04-25 19:52:30.018 [1619380347278200/preprocess/2 (pid 4333)] results = preprocess(self.conn, self.model_level, self.min_date, self.traffic_percent)\n",
+      "2021-04-25 19:52:30.018 [1619380347278200/preprocess/2 (pid 4333)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/metaflow/flowspec.py\", line 128, in __getattr__\n",
+      "2021-04-25 19:52:30.018 [1619380347278200/preprocess/2 (pid 4333)] (self.name, name))\n",
+      "2021-04-25 19:52:30.018 [1619380347278200/preprocess/2 (pid 4333)] AttributeError: Flow TestClusteringFlow has no attribute 'conn'\n",
+      "2021-04-25 19:52:30.018 [1619380347278200/preprocess/2 (pid 4333)] \n",
+      "2021-04-25 19:52:30.019 [1619380347278200/preprocess/2 (pid 4333)] Task failed.\n",
+      "2021-04-25 19:52:30.019 Workflow failed.\n",
+      "2021-04-25 19:52:30.019 Terminating 0 active tasks...\n",
+      "2021-04-25 19:52:30.019 Flushing logs...\n",
+      "    Step failure:\n",
+      "    Step preprocess (task-id 2) failed.\n"
      ]
     }
    ],
@@ -925,33 +940,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running flow: test_clustering.py\n",
-      "Metaflow 2.2.7 executing TestClusteringFlow for user:e02079\n",
-      "Validating your flow...\n",
-      "    The graph looks good!\n",
-      "2021-04-24 15:32:14.479 Workflow starting (run-id 1619278334475796):\n",
-      "2021-04-24 15:32:14.483 [1619278334475796/start/1 (pid 5918)] Task is starting.\n",
-      "2021-04-24 15:32:16.634 [1619278334475796/start/1 (pid 5918)] Task finished successfully.\n",
-      "2021-04-24 15:32:16.642 [1619278334475796/preprocess/2 (pid 5933)] Task is starting.\n",
-      "2021-04-24 15:32:19.959 [1619278334475796/preprocess/2 (pid 5933)] Task finished successfully.\n",
-      "2021-04-24 15:32:19.965 [1619278334475796/fit/3 (pid 5966)] Task is starting.\n",
-      "2021-04-24 15:32:22.189 [1619278334475796/fit/3 (pid 5966)] Task finished successfully.\n",
-      "2021-04-24 15:32:22.196 [1619278334475796/evaluate/4 (pid 5981)] Task is starting.\n",
-      "2021-04-24 15:32:24.366 [1619278334475796/evaluate/4 (pid 5981)] Task finished successfully.\n",
-      "2021-04-24 15:32:24.372 [1619278334475796/end/5 (pid 5996)] Task is starting.\n",
-      "2021-04-24 15:32:26.493 [1619278334475796/end/5 (pid 5996)] INFO:test_clustering:Running command 'track_flow'\n",
-      "2021-04-24 15:32:26.808 [1619278334475796/end/5 (pid 5996)] INFO:test_clustering:Started\n",
-      "2021-04-24 15:32:26.979 [1619278334475796/end/5 (pid 5996)] INFO:test_clustering:Completed after 0:00:00\n",
-      "2021-04-24 15:32:27.496 [1619278334475796/end/5 (pid 5996)] Task finished successfully.\n",
-      "2021-04-24 15:32:27.496 Done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# slow\n",
     "\n",
@@ -1302,9 +1291,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jovyan-discovery]",
+   "display_name": "Python [conda env:sciflow]",
    "language": "python",
-   "name": "conda-env-jovyan-discovery-py"
+   "name": "conda-env-sciflow-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
